start to add generic sprites

--- a/breakout.html
+++ b/breakout.html
@@ -5,6 +5,7 @@
  <body>
    <canvas id="canvas1" width=600 height=600 
            style="border-style: solid;"></canvas>
+   <script type="text/javascript" src="jsgame.js"></script>
    <script type="text/javascript" src="breakout.js"></script>
  </body>
 </html>
